--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -1,6 +1,7 @@
 :global {
   @import 'base';
   @import 'vendor/normalize';
+  @import 'palette';
 
   // Some best-practice CSS that's useful for most apps
   // Just remove them if they're not what you want
@@ -13,6 +14,7 @@
     margin: 0;
     padding: 0;
     height: 100%;
+    background-color: $color5;
   }
 
   *,
