--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -14,7 +14,21 @@
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: $color5;
+    //background-color: $color5;
+
+    .page-container {
+      .title{
+        color: $color3;
+      }
+
+      .fixed {
+        position: fixed;
+      }
+
+      .view-container {
+        border-left: 1px solid $color2;
+      }
+    }
   }
 
   *,
